# Text-Adventure-Game

./: .gitignore  CMakeLists.txt  README.md  script.txt
.github/workflows/: main.yml
header/: armor.hpp  baseItem.hpp  character.hpp  composite_armors.hpp  consumable.hpp  enemy.hpp  entity.hpp  factory.hpp  game_controller.hpp  inventory.hpp  weapon.hpp
mock/: Character_Mock.hpp  Entity_Mock.hpp
mocks/: Character_Mock.hpp  Entity_Mock.hpp
source/: gamecontroller.cpp  main.cpp  tests.cpp
test_files/: Game_Controller_Battle2.txt  Game_Controller_BattleFunctionTestOption4Armor.txt  Game_Controller_BattleFunctionTestOption4ArmorInvalid.txt  Game_Controller_BattleFunctionTestOption4Consumable.txt  Game_Controller_BattleFunctionTestOption4Weapon.txt  Game_Controller_createCharacter_MultiNumInput.txt  Game_Controller_displayBattleOption4.txt  Game_Controller_displayBattleOptions.txt  Game_Controller_getNarrative_1.txt  test_script.txt
tests/: armor_tests.hpp  character_tests.hpp  consumable_tests.hpp  enemy_tests.hpp  factory_tests.hpp  game_controller_tests.hpp  inventory_tests.hpp  weapon_tests.hpp
